# Hatch

./: .gitignore  CodeComprasion.py  ComprasionInput.py  ComprasionVersion.py  CompressionConstants_cpp.py  CompressionInput.py  CompressionVersion.py  Hatch.py  Insert.py  Logging.py  MainCMD.py  MainCMD2.py  MainCompressionCMD.py  MainOt.py  MainOt2.py  MainTest.py  ParsingCodeAndInstruction.py  README_RUS.md  Readme.markdown  ReadmeRus.markdown  SearchCode.py  TokenizeCode.py  Utilities.py  __init__.py  constants.py  getChange.py  gitUtils.py  pyproject.toml  setup.py  test.py
CodeComprasion/: ComprasionVersion.py  MainOt2.py
CompressionConstants/: CompressionConstants_c.py  CompressionConstants_cpp.py  CompressionConstants_cs.py  CompressionConstants_gn.py  CompressionConstants_go.py  CompressionConstants_java.py  CompressionConstants_js.py  CompressionConstants_py.py  CompressionConstants_rb.py  CompressionConstants_rs.py  CompressionConstants_ts.py
source/: unique10.cpp  unique11.cpp
test/FailedTests/: unique1.cpp  unique1.md  unique13.cpp  unique2.cpp  unique2.md  unique20.cpp  unique20.md
test/PassedTests/: unique10.md  unique11.md  unique12.cpp  unique12.md  unique13.cpp  unique13.md  unique14.cpp  unique14.md  unique15.cpp  unique15.md  unique16.cpp  unique16.md  unique17.cpp  unique17.md  unique18.cpp  unique18.md  unique19.cpp  unique19.md  unique20.gn  unique20.md  unique3.cpp  unique3.md  unique5.md  unique6.md  unique7.md  unique8.cpp  unique8.md
